<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2013 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>

    <string name="reply_label">Reply</string>
    <string name="reply_name">Me</string>

    <string name="title_activity_big_text_main">BigTextStyle Main Activity</string>
    <string name="title_activity_big_picture_main">BigPictureStyle Main Activity</string>
    <string name="title_activity_inbox_main">InboxStyle Main Activity</string>
    <string name="title_activity_messaging_main">MessagingStyle Main Activity</string>

    <string name="main_text_activity_big_text_main">
        This Activity would handle the reminder app\'s functionality.
        \n\nThe notification type for this example was the Big Text Style!
    </string>
    <string name="main_text_activity_big_picture_main">
        This Activity would handle the social app\'s functionality for an individual post.
        \n\nThe notification type for this example was the Big Picture Style!
    </string>
    <string name="main_text_activity_inbox_main">
        This Activity would handle the email app\'s functionality for an email(s).
        \n\nThe notification type for this example was the Inbox Style!
    </string>
    <string name="main_text_activity_messaging_main">
        This Activity would handle the messaging app\'s functionality for a chat(s).
        \n\nThe notification type for this example was the Messaging Style!
    </string>

    <string name="versionNameFormat" translatable="false">egotter %s</string>
    <string name="screenNameFormat">\@%s でログイン中</string>
    <string name="lastSyncTimeFormat">最終同期 %s</string>
    <string name="openEgotter">えごったーを開く</string>
    <string name="receivePromptReport">リムられ通知を受信する</string>
    <string name="syncNow">えごったーと設定を同期しています</string>
    <string name="syncCompleted">えごったーとの同期が完了しました</string>
    <string name="receiveIntervalTooShort">前回の受信からの間隔が短すぎます</string>
    <string name="sendInstanceIdToServerIntervalTooShortFormat">次のリクエストまであと%s秒待ってください</string>
    <string name="fetchInstanceId">通知設定を更新中です</string>
    <string name="fetchCredentials">ログイン情報を更新中です</string>
    <string name="sendInstanceIdFailed">えごったーとの通信に失敗しました</string>
    <string name="sendInstanceIdSucceeded">通知をリクエストしました。規定の時間が経過していればリムられ通知が届きます</string>
    <string name="syncFailed">えごったーとの同期に失敗しました</string>

    <string name="openTimeline">えごったーで見る</string>

    <string name="oneSidedFriendsCount">片思いフォロー %s人</string>
    <string name="oneSidedFollowersCount">片思われフォロワー %s人</string>
    <string name="mutualFriendsCount">両思いフォロー %s人</string>
    <string name="unfriendsCount">リムーブした %s人</string>
    <string name="unfollowersCount">リムーブされた %s人</string>
    <string name="blockingOrBlockedCount">ブロックされた %s人</string>
    <string name="oneSidedFriendsInit">片思いフォロー 集計中</string>
    <string name="oneSidedFollowersInit">片思われフォロワー 集計中</string>
    <string name="mutualFriendsInit">両思いフォロー 集計中</string>
    <string name="unfriendsInit">リムーブした 集計中</string>
    <string name="unfollowersInit">リムーブされた 集計中</string>
    <string name="blockingOrBlockedInit">ブロックされた 集計中</string>

    <string name="signInWithTwitter">Twitter でログインする</string>
    <string name="reauthenticateWithTwitter">他のアカウントでログインする</string>
    <string name="signOut">ログアウトする</string>
    <string name="termsOfService">利用規約</string>
    <string name="privacyPolicy">プライバシーポリシー</string>
    <string name="can_do_cannot_do">このアプリで出来ること</string>
    <string name="about">このアプリについて</string>

    <string name="signOutConfirmationMessage">ログアウトするとリムられ通知がスマートフォンに届かなくなります。本当にログアウトしますか？</string>
    <string name="signOutConfirmationOk">はい</string>
    <string name="signOutConfirmationCancel">いいえ</string>

    <string name="openPlayStoreMessage">新しいバージョンが公開されました。お手数ですが、Google Playで最新バージョンのアプリをインストールしてください。</string>
    <string name="openPlayStoreOk">はい</string>

    <string name="q1">このアプリでは何ができますか？</string>
    <string name="a1">このアプリは、えごったーのリムられ通知のために作られました。このアプリをインストールしていると、えごったーのリムられ通知がより正確に、早く、スマートフォンに対して直接届くようになります。</string>

    <string name="q1_2">このアプリを入れているだけでいいのですか？</string>
    <string name="a1_2">はい、そうです。このアプリを入れて、ログインが完了しているだけでリムられ通知がスマホに届くようになります。</string>

    <string name="q2">えごったーとは何ですか？</string>
    <string name="a2">累計で650万回以上使われている、日本最大級のツイッター分析サイトです。https://egotter.com</string>

    <string name="q3">リムられ通知とは何ですか？</string>
    <string name="a3">えごったーには、フォロワーの増減を通知する機能があります。この機能のことをリムられ通知と呼んでいます。通常、リムられ通知はツイッターのDMで届きますが、このアプリを入れていると、スマートフォンに直接通知が届くようになります。</string>

    <string name="q4">今までのリムられ通知と何が違いますか？</string>
    <string name="a4">今までのリムられ通知はツイッターのDMで届いていましたが、送信の失敗や遅延が起きるという問題がありました。このアプリを入れていれば、これらの問題がなくなり、より正確で早くリムられ通知が届くようになります。</string>

    <string name="q4_2">リムられ通知はツイッターのDMとスマートフォン通知の両方に届きますか？</string>
    <string name="a4_2">今のところは、アプリがインストールされている場合はスマートフォン通知のみ届くようにしています。将来的には、どちらに送るか設定できるようにしようと考えています。</string>

    <string name="q5">質問や要望はどこに送ればよいですか？</string>
    <string name="a5">公式アカウント https://twitter.com/ego_tter までお気軽にご連絡ください。</string>
</resources>
