<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.egotter.AboutThisAppActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/mascot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:src="@drawable/egotter500x500" />

            <TextView
                style="@style/question"
                android:text="@string/q1" />

            <TextView
                style="@style/answer"
                android:text="@string/a1" />

            <TextView
                style="@style/question"
                android:text="@string/q2" />

            <TextView
                style="@style/answer"
                android:text="@string/a2" />

            <TextView
                style="@style/question"
                android:text="@string/q3" />

            <TextView
                style="@style/answer"
                android:text="@string/a3" />

            <TextView
                style="@style/question"
                android:text="@string/q4" />

            <TextView
                style="@style/answer"
                android:text="@string/a4" />

            <TextView
                style="@style/question"
                android:text="@string/q5" />

            <TextView
                style="@style/answer"
                android:text="@string/a5" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
