<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.egotter.MainActivity">

    <RelativeLayout
        android:id="@+id/notSignedIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/mascot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:src="@drawable/egotter1000x1000" />

        <Button
            android:id="@+id/signInWithTwitter"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mascot"
            android:layout_centerHorizontal="true"
            android:onClick="authenticate"
            android:text="@string/signInWithTwitter"
            android:textAllCaps="false" />

        <TextView
            style="@style/button"
            android:layout_below="@id/signInWithTwitter"
            android:layout_centerHorizontal="true"
            android:onClick="openAboutThisApp"
            android:text="@string/can_do_cannot_do" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/privacyPolicy"
            android:layout_centerHorizontal="true"
            android:onClick="openTermsOfService"
            android:text="@string/termsOfService" />

        <TextView
            android:id="@+id/privacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:onClick="openPrivacyPolicy"
            android:text="@string/privacyPolicy" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/signedIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:src="@drawable/egotter500x500" />

            <Button
                android:id="@+id/currentUser"
                style="@style/button"
                android:layout_gravity="center"
                android:textAllCaps="false" />

            <View style="@style/hr" />

            <TextView
                android:id="@+id/oneSidedFriends"
                style="@style/button"
                android:onClick="openEgotter"
                android:text="@string/oneSidedFriendsCount" />

            <View style="@style/hr" />

            <TextView
                android:id="@+id/oneSidedFollowers"
                style="@style/button"
                android:onClick="openEgotter"
                android:text="@string/oneSidedFollowersCount" />

            <View style="@style/hr" />

            <TextView
                android:id="@+id/mutualFriends"
                style="@style/button"
                android:onClick="openEgotter"
                android:text="@string/mutualFriendsCount" />

            <View style="@style/hr" />

            <TextView
                android:id="@+id/unfriends"
                style="@style/button"
                android:onClick="openEgotter"
                android:text="@string/unfriendsCount" />

            <View style="@style/hr" />

            <TextView
                android:id="@+id/unfollowers"
                style="@style/button"
                android:onClick="openEgotter"
                android:text="@string/unfollowersCount" />

            <View style="@style/hr" />

            <TextView
                android:id="@+id/blockingOrBlocked"
                style="@style/button"
                android:onClick="openEgotter"
                android:text="@string/blockingOrBlockedCount" />

            <View style="@style/hr" />

            <TextView
                style="@style/button"
                android:text="" />

<!--            <View style="@style/hr" />-->

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal">-->

<!--                <TextView-->
<!--                    style="@style/button"-->
<!--                    android:onClick="receivePromptReport"-->
<!--                    android:text="@string/receivePromptReport" />-->

<!--                <TextView-->
<!--                    android:id="@+id/lastSyncTime"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:textSize="12sp" />-->
<!--            </LinearLayout>-->

            <View style="@style/hr" />

            <TextView
                android:id="@+id/reauthenticateWithTwitter"
                style="@style/button"
                android:onClick="reauthenticate"
                android:text="@string/reauthenticateWithTwitter" />

            <View style="@style/hr" />

            <TextView
                android:id="@+id/signOut"
                style="@style/button"
                android:onClick="signOut"
                android:text="@string/signOut" />

            <View style="@style/hr" />

            <TextView
                style="@style/button"
                android:onClick="openAboutThisApp"
                android:text="@string/can_do_cannot_do" />

            <View style="@style/hr" />

            <TextView
                style="@style/button"
                android:onClick="openTermsOfService"
                android:text="@string/termsOfService" />

            <View style="@style/hr" />

            <TextView
                style="@style/button"
                android:onClick="openPrivacyPolicy"
                android:text="@string/privacyPolicy" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
